# Benana

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.work  go.work.sum  package.json
articles/: how-schools-operate.md
docs/: backend-setup.md  plugins-architecture.md  python-plugins-architecture.md
plugins/: __init__.py  go.mod  plugin.md
plugins/core/: compiler.go  controller.go  go.mod  loader.go  main.go  manager.go  plugins.json  repository.go  response.go  service.go
plugins/core/doc/: openapi.json
plugins/powertable/: __init__.py  go.mod  go.sum  main.go  plugin.py  powertable.go  routes.py
plugins/powertable/migrations/: 0001_init.sql
plugins/reports/: __init__.py  plugin.py  routes.py
plugins/reports/migrations/: 0001_init.sql
plugins/sample_powertable/: __init__.py  plugin.py  routes.py
plugins/sample_powertable/migrations/: 0001_init.sql
plugins/sample_reports/: __init__.py  plugin.py  routes.py
plugins/sample_reports/migrations/: 0001_init.sql
plugins/types/: config.go  config.yaml  go.mod  go.sum  migrator.go  plugin.go  plugin_interface.go
server/: Makefile  alembic.ini  docker-compose.yml  pyproject.toml
server/app/: main.py
server/app/api/: admin.py  plugin_management.py
server/app/core/: db.py  migrator.py  models.py  permissions.py  plugin_manager.py  plugin_spi.py  service_registry.py  settings.py
server/migrations/: env.py
server/migrations/versions/: 0001_add_dummy_core_table.py
server/scripts/: dump_openapi.py
view/: package.json  pnpm-lock.yaml  turbo.json
(+8 files in other folders)
