[tool.poetry]
name = "benana-server"
version = "0.1.0"
description = "Benana host runtime (FastAPI) with dynamic plugin architecture"
authors = ["Benana Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.30"
psycopg = {version = "^3.1.18", extras = ["binary"]}
python-multipart = "^0.0.9"
orjson = "^3.10.5"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
